# bitstamp-sdk-rust

./: Cargo.toml  README.md
bitstamp_client_ws/: Cargo.toml  README.md
bitstamp_client_ws/examples/: book.rs
bitstamp_client_ws/src/: client.rs  lib.rs
bitstamp_client_ws/src/api/: subscribe.rs
bitstamp_ws_client/: Cargo.toml
bitstamp_ws_client/examples/: book.rs
bitstamp_ws_client/src/: error.rs  types.rs
